namespace java com.momo.sanguo.core.server.msg.auto
namespace csharp NetWork.Auto

struct CSPingMsg
{
}