namespace java server.msg.auto
namespace csharp NetWork.Auto

struct SCPongMsg
{
}