include "common.thrift"
namespace java server.msg.auto
namespace csharp NetWork.Auto

struct SCSyncPlayerInfo
{
	10:common.PlayerInfo playerInfomation
}